[package]
name = "axum-otel-metrics"
version = "0.9.1"
edition = "2021"
license = "MIT"
description = "axum OpenTelemetry metrics middleware with prometheus exporter"
homepage = "https://ttys3.dev/"
repository = "https://github.com/ttys3/axum-otel-metrics/"
documentation = "https://docs.rs/axum-otel-metrics"
readme = "README.md"
exclude = [".github/*", "examples/*", "tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.8.1"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = "0.27.1"

tower = "0.5.1"
futures-util = "0.3.31"
pin-project-lite = "0.2.15"
http = "1.2.0"
http-body = "1.0.1"


[dev-dependencies]
opentelemetry-prometheus = { version = "0.27.0"}
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
prometheus = "0.13.4"
tokio = { version = "1.42", features = ["macros"] }
