[package]
name = "axum-metrics-demo"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum-otel-metrics = { path = "../../" }
#axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main"}
axum = "0.8"
tokio = { version = "1.43", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.0"
opentelemetry = "0.28"
opentelemetry-prometheus = { version = "0.28.0" }
prometheus = "0.13.4"
opentelemetry_sdk = "0.28"
opentelemetry-semantic-conventions = { version = "0.28.0", features = ["semconv_experimental"] }
