[package]
name = "axum-metrics-demo"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum-otel-metrics = { path = "../../" }
#axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main"}
axum = "0.8"
tokio = { version = "1.47", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-otlp = { version = "0.30" }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
