[package]
name = "axum-metrics-demo"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum-otel-metrics = { path = "../../" }
#axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main"}
axum = "0.8"
tokio = { version = "1.50", features = ["full", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.1"
opentelemetry = "0.31"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.31" }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
